--- a/thesis_paper/thesis.tex
+++ b/thesis_paper/thesis.tex
@@ -515,7 +515,8 @@ escapeinside={\%}{)}          % if you want to add a comment within your code
 \input{03_SystemDesign}
 \input{04_SystemImplementation}
 \input{05_ExperimentalEvaluation}
-\input{06_Conclusion}
+\input{06_CollaborationWithOtherProject}
+\input{07_Conclusion}
 
 
 
