--- a/trunk/thesis_paper/01_Introduction.tex
+++ b/trunk/thesis_paper/01_Introduction.tex
@@ -5,7 +5,9 @@
 , \cite{Callahan:2006:PVR}, \cite{Pacanowski:2008:ESS}, \cite{Cheng:2007:AMP}, \cite{Bajaj:1999:PCTriMesh}, \cite{Khodakovsky:2000:PGC}, \cite{Deb:2006:RSRT}, \cite{Hoppe:1998:EIPM}
 }
 \\
-\TODO{In this chapter, we will introduce the thesis project. }
+\TODO{introduce this paper! }
+\\
+
 
 \section{Motivation}
 \TODO{In this section the motivation of our project will be described.}
