--- a/thesis_paper/00_Dedication.tex
+++ b/thesis_paper/00_Dedication.tex
@@ -1,5 +1,5 @@
 
-\pagestyle{plain}
+\thispagestyle{plain}
 	\begin{quote}
         \raggedleft {\em To my parents Jianhua Xu and Min Zhang}
    	\end{quote}
