--- a/trunk/thesis_paper/01_Introduction.tex
+++ b/trunk/thesis_paper/01_Introduction.tex
@@ -8,14 +8,38 @@
 \TODO{introduce this paper! }
 \\
 
+With the ever fast development of modern computer science, computer graphics and visualization has become a big topic. And with the more and more advanced 3D scanner and surface reconstruction technology, people are able to get extremely detailed 3D model from real objects such as sculptures. 
+And mean while, in recent years, various mobile devices (such iPhone, iPad, Google Nexus series, etc.) with much powerful computing resource are being designed and manufactured. With faster CPU/GPU and larger memory, these hand-held devices are possible to run graphics programs and view 3D models. Therefore, how to view these large-scale 3D models becomes a hot topic. 
+
+\smallskip
+
+In this thesis, we proposed a streaming framework for large scale geometry models. In this framework users can connect our server from a mobile device (e.g. iPad) and view the 3D geometry model they choose progressively. User can browse the model using drag-and-zoom gesture on the multi-touch screen of the device and the system will refine the corresponding part of the viewing model according to users' viewing angle. Therefore our system can provide view-dependent, selective geometry streaming. 
+
+\smallskip
+In the following paragraphs of this chapter, we will introduce in detail the motivation of the thesis in Section~\ref{section:motivation}. And in Section~\ref{section:background} we will introduce the background of this topic. And Section~\ref{section:relWork} related works in the area of this topic will be listed and discussed. 
+
+\smallskip
+And then In Chapter~\ref{chapter:BasicConcepts}, we will describe some basic theoretical and technical concepts behind the topic of this thesis including \emph{Progressive Mesh}, the \emph{Quadric Error Metrics}, \emph{View-dependent Progressive Mesh}, \etc
+
+\smallskip
+In Chapter~\ref{chapter:SystemDesign}, we will describe the overall system architecture design including the server architecture and client architecture. 
+
+\smallskip
+In Chapter~\ref{chapter:SystemImplementation}, we will describe in detail about the implementation of our geometry streaming framework. In this chapter, both server and client side implementation will be illustrated. And after that there will be a short discussion of the implementation. 
+
+\smallskip
+In Chapter~\ref{chapter:ExperimentalEvaluation} and Chapter~\{}
 
 \section{Motivation}
+\label{section:motivation}
 \TODO{In this section the motivation of our project will be described.}
 
 \section{Background}
+\label{section:background}
 \TODO{Here we will introduce background information of this topic.}
 
 \section{Related Work}
+\label{section:relWork}
 \TODO{In this section we will introduce previous research in this area. }
 
 %Picture
