--- a/trunk/thesis_paper/ivda-macros.tex
+++ b/trunk/thesis_paper/ivda-macros.tex
@@ -43,6 +43,7 @@
 %%       for this purpose
 \usepackage{xspace}
 \def\etal{et al.\xspace}
+\def\etc{etc.\@\xspace}
 %% Jens: for align environment
 \usepackage{amsmath,amsfonts,amssymb}
 %% for using urls
