--- a/trunk/thesis_paper/00_Dedication.tex
+++ b/trunk/thesis_paper/00_Dedication.tex
@@ -1,7 +1,12 @@
 
 \thispagestyle{plain}
 	\begin{quote}
-        \raggedleft {\em To my parents Jianhua Xu and Min Zhang}
+	\begin{center}
+	\begin{spacing}{2.5}
+        %\raggedleft {\em To my parents Jianhua Xu, Min Zhang and my girlfriend Jing for their love and support. }
+        \em{ To my parents Jianhua Xu, Min Zhang and my girlfriend Jing for their love and support. }
+        \end{spacing}
+        \end{center}
    	\end{quote}
 
 
