--- a/trunk/thesis_paper/06_CollaborationWithOtherProject.tex
+++ b/trunk/thesis_paper/06_CollaborationWithOtherProject.tex
@@ -1,5 +1,5 @@
 \chapter{Collaboration with Other Projects}
-\label{chapter:Collaboration with Other Projects}
+\label{chapter:CollaborationWithOtherProjects}
 \TODO{In this chapter we will introduce the collaboration with other projects. Especially with the Hybrid Rendering Server Project.}
 
 
