--- a/trunk/thesis_paper/thesis.tex
+++ b/trunk/thesis_paper/thesis.tex
@@ -486,16 +486,11 @@ escapeinside={\%}{)}          % if you want to add a comment within your code
 %%% structure: \section \subsection \subsubsection \paragraph \subparagraph
 %%%
 \pagenumbering{roman}
-%\cleardoublepage
-%\newpage\mbox{}\newpage
 \input{00_Cover}
-\newpage\mbox{}\newpage
-
+\newpage
 \input{00_Dedication}
-%\clearpage\mbox{}\clearpage
 \input{00_Abstract}
-%\clearpage\mbox{}\clearpage
-%\newpage
+
 %%% start a new page and display the table of contents
 \addtolength{\textheight}{9mm}
 \newpage
