--- a/thesis_paper/01_Introduction.tex
+++ b/thesis_paper/01_Introduction.tex
@@ -8,8 +8,8 @@
 \TODO{introduce this paper! }
 \\
 
-With the ever fast development of modern computer science, computer graphics and visualization has become a big topic. And with the more and more advanced 3D scanner and surface reconstruction technology, people are able to get extremely detailed 3D model from real objects such as sculptures. 
-And mean while, in recent years, various mobile devices (such iPhone, iPad, Google Nexus series, etc.) with much powerful computing resource are being designed and manufactured. With faster CPU/GPU and larger memory, these hand-held devices are possible to run graphics programs and view 3D models. Therefore, how to view these large-scale 3D models becomes a hot topic. 
+With the ever fast development of modern computer science, computer graphics and visualization has become a big topic. And with the more and more advanced 3D scanner and surface reconstruction technology, people are able to get extremely large 3D model with much more detail than ever before that are scanned from real objects such as sculptures. 
+And mean while, in recent years, various mobile devices (such as iPhone, iPad, Google Nexus series, etc.) with much powerful computing resource are being designed and manufactured. With faster CPU/GPU and larger memory, these hand-held devices are made possible to run graphics programs or to view 3D models. These two trends have raised many topics about graphics development on mobile devices. The visualisation of large-scale 3D model is one of the hot topics among them. 
 
 \smallskip
 
@@ -28,11 +28,14 @@ In Chapter~\ref{chapter:SystemDesign}, we will describe the overall system archi
 In Chapter~\ref{chapter:SystemImplementation}, we will describe in detail about the implementation of our geometry streaming framework. In this chapter, both server and client side implementation will be illustrated. And after that there will be a short discussion of the implementation. 
 
 \smallskip
-In Chapter~\ref{chapter:ExperimentalEvaluation} and Chapter~\{}
+In Chapter~\ref{chapter:ExperimentalEvaluation} and Chapter~\ref{chapter:CollaborationWithOtherProjects} we will show the experiment result of our framework and we will also describe the use of our framework in other projects. 
+
+In the last chapter, we will conclude this thesis. Future work will also be discussed in this chapter. 
 
 \section{Motivation}
 \label{section:motivation}
 \TODO{In this section the motivation of our project will be described.}
+
 
 \section{Background}
 \label{section:background}
