--- a/thesis_paper/thesis.bib
+++ b/thesis_paper/thesis.bib
@@ -183,3 +183,102 @@ ISSN={1051-8215},}
     year = {1998}
 }
 
+@article{Schroeder:1992:DTM,
+ author = {Schroeder, William J. and Zarge, Jonathan A. and Lorensen, William E.},
+ title = {Decimation of triangle meshes},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {July 1992},
+ volume = {26},
+ number = {2},
+ month = jul,
+ year = {1992},
+ issn = {0097-8930},
+ pages = {65--70},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/142920.134010},
+ doi = {10.1145/142920.134010},
+ acmid = {134010},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer graphics, geometric modeling, medical imaging, terrain modeling, volume modeling},
+} 
+
+@ARTICLE{Soucy:96:MRS,
+    author = {Marc Soucy and Denis Laurendeau},
+    title = {Multiresolution surface modeling based on hierarchical triangulation},
+    journal = {Computer Vision and Image Understanding},
+    year = {1996},
+    volume = {63},
+    pages = {1--14}
+}
+
+@inproceedings{Rossignac:93:MRARCS,
+year={1993},
+isbn={978-3-642-78116-2},
+booktitle={Modeling in Computer Graphics},
+series={IFIP Series on Computer Graphics},
+editor={Falcidieno, Bianca and Kunii, TosiyasuL.},
+doi={10.1007/978-3-642-78114-8_29},
+title={Multi-resolution 3D approximations for rendering complex scenes},
+url={http://dx.doi.org/10.1007/978-3-642-78114-8_29},
+publisher={Springer Berlin Heidelberg},
+author={Rossignac, Jarek and Borrel, Paul},
+pages={455-465},
+language={English}
+}
+
+@inproceedings{Hoppe:1993:MO,
+ author = {Hoppe, Hugues and DeRose, Tony and Duchamp, Tom and McDonald, John and Stuetzle, Werner},
+ title = {Mesh optimization},
+ booktitle = {Proceedings of the 20th annual conference on Computer graphics and interactive techniques},
+ series = {SIGGRAPH '93},
+ year = {1993},
+ isbn = {0-89791-601-8},
+ location = {Anaheim, CA},
+ pages = {19--26},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/166117.166119},
+ doi = {10.1145/166117.166119},
+ acmid = {166119},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {geometric modeling, model simplification, range data analysis, surface fitting, three-dimensional shape recovery},
+} 
+
+@article{RRR96,
+author = {R\'emi Ronfard and Jarek Rossignac},
+title = {Full-range approximation of triangulated polyhedra},
+journal = {Comput. Graph. Forum},
+volume = 15,
+number = {3},
+pages = {67--76},
+codepage = {C},
+note = {Special Issue: Proceedings of Eurographics '96, Poitiers, France. Jarek Rossignac and Fran\c{c}ois Sillon eds.},
+month = aou,
+year = 1996
+}
+@article{Gueziec:95:SSVT,
+author = {A. Gueziec},
+title = {{Surface simplification with variable tolerance}},
+year = {1995},
+masid = {1329401}
+}
+
+@inproceedings{Garland:1997:SSU,
+ author = {Garland, Michael and Heckbert, Paul S.},
+ title = {Surface simplification using quadric error metrics},
+ booktitle = {Proceedings of the 24th annual conference on Computer graphics and interactive techniques},
+ series = {SIGGRAPH '97},
+ year = {1997},
+ isbn = {0-89791-896-7},
+ pages = {209--216},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1145/258734.258849},
+ doi = {10.1145/258734.258849},
+ acmid = {258849},
+ publisher = {ACM Press/Addison-Wesley Publishing Co.},
+ address = {New York, NY, USA},
+ keywords = {level of detail, mutiresolution modeling, non-manifold, pair contraction, surface simplification},
+} 
+
+
